# gxxnet

./: .gitignore  CMakeLists.txt  Packet.cpp  Packet.hpp  Peer.cpp  Peer.hpp  Socket.cpp  Socket.hpp  Test.cpp  makefile  uml.uxf
includes/: Client.hpp  Host.hpp  Message.hpp  Packet.hpp  Remote.hpp  Socket.hpp  Task.hpp
includes/NativeSocket/: UnixSocket.hpp  WinSocket.hpp
includes/ThreadSafe/: SafeQueue.hpp  SpinLock.hpp
sources/: Client.cpp  Host.cpp  Remote.cpp  Task.cpp  Test.cpp
sources/Native/: UnixSocket.cpp  WinSocket.cpp
